load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["qos.go"],
    importpath = "github.com/scionproto/scion/go/border/qos",
    visibility = ["//visibility:public"],
    deps = [
        "//go/border/qos/conf:go_default_library",
        "//go/border/qos/queues:go_default_library",
        "//go/border/qos/scheduler:go_default_library",
        "//go/border/rpkt:go_default_library",
        "//go/lib/log:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["qos_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//go/border/qos/conf:go_default_library",
        "//go/border/rpkt:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/l4:go_default_library",
        "//go/lib/spkt:go_default_library",
        "@com_github_inconshreveable_log15//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
