load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bufQueue.go",
        "channelQueue.go",
        "customQueue.go",
        "policer.go",
        "queue.go",
        "sliceQueue.go"
    ],
    importpath = "github.com/scionproto/scion/go/border/qosqueues",
    visibility = ["//visibility:public"],
    deps = [
        "//go/border/brconf:go_default_library",
        "//go/border/ifstate:go_default_library",
        "//go/border/internal/metrics:go_default_library",
        "//go/border/rcmn:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/border/rpkt:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/ringbuf:go_default_library",
        "//go/lib/scmp:go_default_library",
    ],
)
