load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["qosconf.go"],
    importpath = "github.com/scionproto/scion/go/border/qos/conf",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/log:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
