load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["classRule.go"],
    importpath = "github.com/scionproto/scion/go/border/qos/qosclassification",
    visibility = ["//visibility:public"],
    deps = [
        "//go/border/qos/qosconf:go_default_library",
        "//go/border/rpkt:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["classRule_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/border/qos:go_default_library",
        "//go/border/qos/qosqueues:go_default_library",
        "//go/border/rpkt:go_default_library",
    ],
)
