load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bufQueue.go",
        "channelQueue.go",
        "classRule.go",
        "classRuleCache.go",
        "customQueue.go",
        "policer.go",
        "qosConfig.go",
        "queue.go",
        "sliceQueue.go",
    ],
    importpath = "github.com/scionproto/scion/go/border/qos/qosqueues",
    visibility = ["//visibility:public"],
    deps = [
        "//go/border/qos/qosconf:go_default_library",
        "//go/border/rpkt:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/ringbuf:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bufQueue_test.go",
        "channelQueue_test.go",
        "classRule_test.go",
        "customQueue_test.go",
        "policer_test.go",
        "queue_test.go",
        "sliceQueue_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//go/border/qos:go_default_library",
        "//go/border/qos/qosconf:go_default_library",
        "//go/border/rpkt:go_default_library",
    ],
)
