load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "classRule_test.go",
        "queue_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//go/border/qos:go_default_library",
        "//go/border/qos/conf:go_default_library",
        "//go/border/rpkt:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/l4:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/spkt:go_default_library",
        "@com_github_inconshreveable_log15//:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "bufQueue.go",
        "channelQueue.go",
        "classRule.go",
        "classRuleCache.go",
        "classRuleWoCache.go",
        "customQueue.go",
        "parallelClassRule.go",
        "policer.go",
        "qosConfig.go",
        "queue.go",
        "semiParallelClassRule.go",
        "sliceQueue.go",
    ],
    importpath = "github.com/scionproto/scion/go/border/qos/queues",
    visibility = ["//visibility:public"],
    deps = [
        "//go/border/qos/conf:go_default_library",
        "//go/border/rpkt:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/ringbuf:go_default_library",
    ],
)
