load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "drrScheduler.go",
        "mmDrrScheduler.go",
        "raterrScheduler.go",
        "rrScheduler.go",
        "scheduler.go",
    ],
    importpath = "github.com/scionproto/scion/go/border/qos/scheduler",
    visibility = ["//visibility:public"],
    deps = [
        "//go/border/qos/queues:go_default_library",
        "//go/border/rpkt:go_default_library",
        "//go/lib/log:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "drrScheduler_test.go",
        "mmDrrScheduler_test.go",
        "raterrScheduler_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/border/qos/queues:go_default_library",
        "//go/border/rpkt:go_default_library",
    ],
)
